feat: adds debug logic

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -57,6 +57,9 @@ jobs:
     needs: test
 
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
     if: github.event_name == 'push'
 
     steps:
@@ -66,7 +69,7 @@ jobs:
         run: docker build . --file Dockerfile --tag $IMAGE_NAME
 
       - name: Log into GitHub Container Registry
-        run: echo "${{ secrets.CHANGELOG_CR_PAT }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Push image to GitHub Container Registry
         run: |
